--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,9 @@ disabled_rules:
 opt_in_rules:
     - collection_alignment
 
+large_tuple:
+    warning: 3
+    error: 4
 opening_brace:
     allow_multiline_func: true
 switch_case_alignment:
