--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -53,6 +53,30 @@
             "args": [],
             "cwd": "${workspaceFolder:SwiftAdventOfCode}",
             "preLaunchTask": "swift: Build Release aoc2022"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "args": [],
+            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
+            "name": "Debug aoc2023",
+            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/debug/aoc2023",
+            "preLaunchTask": "swift: Build Debug aoc2023"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "args": [],
+            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
+            "name": "Release aoc2023",
+            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc2023",
+            "preLaunchTask": "swift: Build Release aoc2023"
         }
     ]
 }
