--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 .DS_Store
+
+
+# local auth token for fetching input files
+auth_token
