--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "cSpell.words": [
-        "adventofcode",
-        "whitespaces"
-    ]
+    "cSpell.words": ["adventofcode", "uniquing", "whitespaces"]
 }
