--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -77,6 +77,24 @@
             "name": "Release aoc2023",
             "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc2023",
             "preLaunchTask": "swift: Build Release aoc2023"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "args": [],
+            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
+            "name": "Debug aoc2024",
+            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/debug/aoc2024",
+            "preLaunchTask": "swift: Build Debug aoc2024"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "args": [],
+            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
+            "name": "Release aoc2024",
+            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc2024",
+            "preLaunchTask": "swift: Build Release aoc2024"
         }
     ]
 }
