--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cSpell.words": ["adventofcode", "uniquing", "whitespaces"]
+    "cSpell.words": ["adventofcode", "Codextended", "uniquing", "whitespaces"]
 }
