--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "cSpell.words": ["adventofcode", "Codextended", "uniquing", "whitespaces"]
+    "cSpell.words": [
+        "adventofcode",
+        "antinodes",
+        "Codextended",
+        "Collinearity",
+        "uniquing",
+        "whitespaces"
+    ]
 }
