--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Collinearity",
         "Fragmenter",
         "Subrange",
+        "trailheads",
         "uniquing",
         "whitespaces"
     ]
