--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Codextended",
         "Collinearity",
         "Fragmenter",
+        "keypresses",
         "Subrange",
         "trailheads",
         "uniquing",
