--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "cSpell.words": [
         "adventofcode",
         "antinodes",
+        "Bron",
         "Chronospatial",
         "Codextended",
         "Collinearity",
         "Fragmenter",
+        "Kerbosch",
         "keypresses",
         "Subrange",
         "trailheads",
