--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Chronospatial",
         "Codextended",
         "Collinearity",
+        "Cout",
         "Fragmenter",
         "Kerbosch",
         "keypresses",
