--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Fragmenter",
         "Kerbosch",
         "keypresses",
+        "mpalmer",
         "Subrange",
         "trailheads",
         "uniquing",
