--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,10 +10,16 @@
         "Fragmenter",
         "Kerbosch",
         "keypresses",
+        "Lanternfish",
+        "Lavaduct",
         "mpalmer",
+        "Pathing",
+        "Proboscidea",
+        "Snowverload",
         "Subrange",
         "trailheads",
         "uniquing",
+        "Volcanium",
         "whitespaces"
     ]
 }
