Update run script

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,94 +3,20 @@
         {
             "type": "swift",
             "request": "launch",
-            "name": "Debug aoc2020",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/debug/aoc2020",
             "args": [],
             "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "preLaunchTask": "swift: Build Debug aoc2020"
-        },
-        {
-            "type": "swift",
-            "request": "launch",
-            "name": "Release aoc2020",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc2020",
-            "args": [],
-            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "preLaunchTask": "swift: Build Release aoc2020"
-        },
-        {
-            "type": "swift",
-            "request": "launch",
-            "name": "Debug aoc2021",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/debug/aoc2021",
-            "args": [],
-            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "preLaunchTask": "swift: Build Debug aoc2021"
-        },
-        {
-            "type": "swift",
-            "request": "launch",
-            "name": "Release aoc2021",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc2021",
-            "args": [],
-            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "preLaunchTask": "swift: Build Release aoc2021"
-        },
-        {
-            "type": "swift",
-            "request": "launch",
-            "name": "Debug aoc2022",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/debug/aoc2022",
-            "args": [],
-            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "preLaunchTask": "swift: Build Debug aoc2022"
-        },
-        {
-            "type": "swift",
-            "request": "launch",
-            "name": "Release aoc2022",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc2022",
-            "args": [],
-            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "preLaunchTask": "swift: Build Release aoc2022"
-        },
-        {
-            "type": "swift",
-            "request": "launch",
-            "sourceLanguages": ["swift"],
-            "args": [],
-            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "name": "Debug aoc2023",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/debug/aoc2023",
-            "preLaunchTask": "swift: Build Debug aoc2023"
-        },
-        {
-            "type": "swift",
-            "request": "launch",
-            "sourceLanguages": ["swift"],
-            "args": [],
-            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "name": "Release aoc2023",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc2023",
-            "preLaunchTask": "swift: Build Release aoc2023"
+            "name": "Debug aoc",
+            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/debug/aoc",
+            "preLaunchTask": "swift: Build Debug aoc"
         },
         {
             "type": "swift",
             "request": "launch",
             "args": [],
             "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "name": "Debug aoc2024",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/debug/aoc2024",
-            "preLaunchTask": "swift: Build Debug aoc2024"
-        },
-        {
-            "type": "swift",
-            "request": "launch",
-            "args": [],
-            "cwd": "${workspaceFolder:SwiftAdventOfCode}",
-            "name": "Release aoc2024",
-            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc2024",
-            "preLaunchTask": "swift: Build Release aoc2024"
+            "name": "Release aoc",
+            "program": "${workspaceFolder:SwiftAdventOfCode}/.build/release/aoc",
+            "preLaunchTask": "swift: Build Release aoc"
         }
     ]
 }
