Save multiple benchmark runs to improve performance change reporting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "adventofcode",
         "antinodes",
+        "attoseconds",
         "Bron",
         "Chronospatial",
         "Codextended",
