--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "Collinearity",
         "Cout",
         "Fragmenter",
+        "Joltage",
         "Kerbosch",
         "keypresses",
         "Lanternfish",
